# discord_remote_auth

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  example.py  pyproject.toml
discord_remote_auth/: __init__.py  types.py
docs/source/: api.rst  conf.py  index.rst
